package gde.gde_search;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class GdeSearchApplication {

    public static void main(String[] args) {
        SpringApplication.run(GdeSearchApplication.class, args);
    }

}   
    