package gde.gde_search.exception;

public abstract class ApiSubError {
}